--- a/app/src/main/res/layout/activity_get.xml
+++ b/app/src/main/res/layout/activity_get.xml
@@ -11,8 +11,22 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="path"
+        android:text="Path"/>
 
-        android:text="EXECUTE"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="query"
+        android:text="query"/>
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="queryMap"
+        android:text="queryMap"/>
 
     <TextView
         android:id="@+id/content"
