--- a/app/src/main/res/layout/activity_hello_world.xml
+++ b/app/src/main/res/layout/activity_hello_world.xml
@@ -6,12 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="loveq.com.retrofitdemo.ui.GetActivity">
+   >
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:onClick="execute"
         android:text="EXECUTE"/>
 
     <TextView
