--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,14 @@
        android:layout_height="wrap_content"/>
 
    <Button
-       android:onClick="Form"
-       android:text="表单提交"
+       android:onClick="header"
+       android:text="Header"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"/>
+
+   <Button
+       android:onClick="url"
+       android:text="Url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
 </LinearLayout>
