--- a/app/src/main/res/layout/activity_url.xml
+++ b/app/src/main/res/layout/activity_url.xml
@@ -6,25 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="loveq.com.retrofitdemo.ui.FormActivity">
+    tools:context="loveq.com.retrofitdemo.ui.UrlActivity"
+    >
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="Field"
-        android:text="Field注解"/>
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="FieldMap"
-        android:text="FieldMap注解"/>
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="Part"
-        android:text="Part注解上传文件"/>
+        android:onClick="url"
+        android:text="url"/>
 
     <TextView
         android:id="@+id/content"
